--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "axios": "^0.18.0",
+    "axios": "^0.18.1",
     "bootstrap-vue": "^2.0.0-rc.21",
+    "crypto": "^1.0.1",
     "mockjs": "^1.0.1-beta3",
     "v-viewer": "^1.4.0",
     "vue": "^2.5.2",
+    "vue-navigation": "^1.1.4",
+    "vue-photo-preview": "^1.1.3",
     "vue-preview": "^1.1.3",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.0.1"
