--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mockjs": "^1.0.1-beta3",
     "v-viewer": "^1.4.0",
     "vue": "^2.5.2",
+    "vue-drag-verify": "^1.0.6",
     "vue-navigation": "^1.1.4",
     "vue-photo-preview": "^1.1.3",
     "vue-preview": "^1.1.3",
